cros config changes